tooling/nargo_cli/tests/snapshots/execution_success/workspace_default_member/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QQQqAMAwEW/FBSZO0yc2vWGz//wRBI5TiTQfC5jQsG8NN9JtZPDdP+AaOLoLM3EpqSLhDsqoCLDUrKorKkZSoKWuxagUMmRp2Meoui//1ulzrsEWY/rdtHk55268IRAEAAA==",
  "debug_symbols": "dY9NCoNADIXvkvUsLNSNVylF4hhlIGSGOCMU8e6Noq1ddJWfly/JW6CnroxtkCFO0DwW6DQwh7Hl6DGHKNZdVgdn2WYlshZcdKMSKkmGRgqzgxm57ENTQtljRjW1ckDSW7SFQ2DastV96eo/eq8Ptr594Nrop1Xog/78CxU029iMGrBjOjwMRfzFUn6lUzlNJ42e+qK0rds1O/AG",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    assert(x == y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
